--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -41,7 +41,7 @@
     background-size: 100%;
 }
 .model-content-wrapper {
-    height: 300px;
+    height: 240px;
 }
 @media(max-width:767px) {
     .carousel-caption {
